# suika_task

./: .gitignore  README.md  index.html  pyproject.toml
src/: launcher.py
src/suika_task/: __init__.py
